Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6111

Regression: When debugging core dump, Shift+F5 doesn't terminate the debugging session

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.2.0
    • Qt Creator 2.4.0
    • Debugger
    • None
    • Windows XP
    • a43336ad83ef5c787048e63d22d7cbc671d7e1f

    Description

      See attached screenshots. Shortcut is not displayed on the menu.

      HiddenStop has Shift+F5, but Stop doesn't have any shortcut. Assigning Shift+F5 to Stop solves this.

      Attachments

        1. exitdebug1.png
          exitdebug1.png
          5 kB
        2. exitdebug2.png
          exitdebug2.png
          9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes