debugger: make Shift-F5 exit when debugging a core file

Task-number: QTCREATORBUG-6111
Change-Id: I18c10412ac9637261bd4d83dcd7e6bbff6fdbe03
Reviewed-by: hjk <qthjk@ovi.com>